[package]
name = "rule-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1.68"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID处理
uuid = { version = "1.3", features = ["v4", "serde"] }

# 日志
log = "0.4"
env_logger = "0.11.6"